--- a/content/W12-13coppelia模擬.html
+++ b/content/W12-13coppelia模擬.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 直播影片.html'>W11 直播影片</a><li><a href='W12 直播影片.html'>W12 直播影片</a><li><a href='W13 機械手臂控制、程式控制攀爬機.html'>W13 機械手臂控制、程式控制攀爬機</a><li><a href='W12-13coppelia模擬.html'>W12-13coppelia模擬</a><li><a href='W14coppelia模擬.html'>W14coppelia模擬</a><li><a href='W15coppelia模擬.html'>W15coppelia模擬</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li></ul><li class='has-children'><a href='筆記.html'>筆記</a><ul class='dropdown'><li><a href='coppelia啟動教學.html'>coppelia啟動教學</a><li><a href='lua語法和按鍵介紹.html'>lua語法和按鍵介紹</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 討論小組主題.html'>W11 討論小組主題</a><li><a href='W12 無障礙越野車繪製.html'>W12 無障礙越野車繪製</a><li><a href='W13 無障礙越野車修改.html'>W13 無障礙越野車修改</a><li><a href='W12-13coppelia模擬.html'>W12-13coppelia模擬</a><li><a href='W14coppelia模擬.html'>W14coppelia模擬</a><li><a href='W15coppelia模擬.html'>W15coppelia模擬</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li></ul><li class='has-children'><a href='筆記.html'>筆記</a><ul class='dropdown'><li><a href='coppelia啟動教學.html'>coppelia啟動教學</a><li><a href='lua語法和按鍵介紹.html'>lua語法和按鍵介紹</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,12 +134,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W13 機械手臂控制、程式控制攀爬機 << <a href='W13 機械手臂控制、程式控制攀爬機.html'>Previous</a> <a href='W14coppelia模擬.html'>Next</a> >> W14coppelia模擬<br /><h1>W12-13coppelia模擬</h1>
+    <div id="tipue_search_content">W13 無障礙越野車修改 << <a href='W13 無障礙越野車修改.html'>Previous</a> <a href='W14coppelia模擬.html'>Next</a> >> W14coppelia模擬<br /><h1>W12-13coppelia模擬</h1>
 <p>小組作品進度</p>
 <p>使用coppeliasim做初步模擬+lua控制</p>
 <p>說明:在場景中做初步的零件連接，並利用lua控制車子前進，但因為連接軸的問題，車子目前只能做前後移動和上下調整角度</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1p7-JPmSXnQ" title="YouTube video player" width="560"></iframe></p>
-<br />W13 機械手臂控制、程式控制攀爬機 << <a href='W13 機械手臂控制、程式控制攀爬機.html'>Previous</a> <a href='W14coppelia模擬.html'>Next</a> >> W14coppelia模擬</div>
+<br />W13 無障礙越野車修改 << <a href='W13 無障礙越野車修改.html'>Previous</a> <a href='W14coppelia模擬.html'>Next</a> >> W14coppelia模擬</div>
         
     <!-- footer -->
       <div class="container">
