--- a/content/W13 無障礙越野車修改.html
+++ b/content/W13 無障礙越野車修改.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 直播影片.html'>W11 直播影片</a><li><a href='W12 直播影片.html'>W12 直播影片</a><li><a href='W13 機械手臂控制、程式控制攀爬機.html'>W13 機械手臂控制、程式控制攀爬機</a><li><a href='W12-13coppelia模擬.html'>W12-13coppelia模擬</a><li><a href='W14coppelia模擬.html'>W14coppelia模擬</a><li><a href='W15coppelia模擬.html'>W15coppelia模擬</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li></ul><li class='has-children'><a href='筆記.html'>筆記</a><ul class='dropdown'><li><a href='coppelia啟動教學.html'>coppelia啟動教學</a><li><a href='lua語法和按鍵介紹.html'>lua語法和按鍵介紹</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 討論小組主題.html'>W11 討論小組主題</a><li><a href='W12 無障礙越野車繪製.html'>W12 無障礙越野車繪製</a><li><a href='W13 無障礙越野車修改.html'>W13 無障礙越野車修改</a><li><a href='W12-13coppelia模擬.html'>W12-13coppelia模擬</a><li><a href='W14coppelia模擬.html'>W14coppelia模擬</a><li><a href='W15coppelia模擬.html'>W15coppelia模擬</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li></ul><li class='has-children'><a href='筆記.html'>筆記</a><ul class='dropdown'><li><a href='coppelia啟動教學.html'>coppelia啟動教學</a><li><a href='lua語法和按鍵介紹.html'>lua語法和按鍵介紹</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,10 +134,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W11 直播影片 << <a href='W11 直播影片.html'>Previous</a> <a href='W13 機械手臂控制、程式控制攀爬機.html'>Next</a> >> W13 機械手臂控制、程式控制攀爬機<br /><h1>W12 直播影片</h1>
-<p><span>stage3-bg5</span><br/><span>40823205、40823228</span><br/><span>主題 : 解決CMSIMDE版本錯誤</span></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sm5dSwAz2Z4" width="560"></iframe></p>
-<br />W11 直播影片 << <a href='W11 直播影片.html'>Previous</a> <a href='W13 機械手臂控制、程式控制攀爬機.html'>Next</a> >> W13 機械手臂控制、程式控制攀爬機</div>
+    <div id="tipue_search_content">W12 無障礙越野車繪製 << <a href='W12 無障礙越野車繪製.html'>Previous</a> <a href='W12-13coppelia模擬.html'>Next</a> >> W12-13coppelia模擬<br /><h1>W13 無障礙越野車修改</h1>
+<p><a href="https://40823220.github.io/cd2021/content/12.html">40823220網站</a></p>
+<p>本週主要為零件、產品大改良</p>
+<p>零件檔載點:<a href="https://40823220.github.io/cd2021/downloads/Desktop.rar">零件檔</a></p>
+<p>更進如下:</p>
+<p>1.輪胎加大，紋路朝前，為了讓摩擦力增加</p>
+<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/798.bmp" width="400"/></p>
+<p>2.將單向馬達架高，直接驅動蝸桿蝸輪，省略多餘的萬象接頭，使模擬更容易</p>
+<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/789.bmp" width="400"/></p>
+<p>3.輪軸加大，使模擬安插軸更容易</p>
+<p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
+<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
+<p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
+<p></p><br />W12 無障礙越野車繪製 << <a href='W12 無障礙越野車繪製.html'>Previous</a> <a href='W12-13coppelia模擬.html'>Next</a> >> W12-13coppelia模擬</div>
         
     <!-- footer -->
       <div class="container">
