--- a/config/content.htm
+++ b/config/content.htm
@@ -107,7 +107,8 @@
 <p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
 <p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
 <p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
-<p></p><h2>W12-13coppelia模擬</h2>
+<p></p>
+<h2>W12-13coppelia模擬</h2>
 <p>小組作品進度</p>
 <p>使用coppeliasim做初步模擬+lua控制</p>
 <p>說明:在場景中做初步的零件連接，並利用lua控制車子前進，但因為連接軸的問題，車子目前只能做前後移動和上下調整角度</p>
@@ -235,22 +236,12 @@ if clientID !=-1:
 else:
     print ('Failed connecting to  remote API server')
     print ('End')</pre>
-<h1>影片</h1>
-<p>ipv4連線操作影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
-<p><b>---------------------------------------</b></p>
-<p>直播的影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></p>
-<p><br/><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sm5dSwAz2Z4" title="YouTube video player" width="560"></iframe></p>
-<p>=======</p>
-<p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
-<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></strong></p>
-<h2>W12</h2>
+<h1>直播影片</h1>
+<p></p><h2>w12</h2>
 <p><span>40823221 40823237</span><br/><span>主題: ipv4操作api</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
 <p><span>40823220 40823250<br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span></span></p>
-<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p><h2>W13</h2>
+<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p><h2>w13</h2>
 <p>上課直播</p>
 <p>40823205 40823228</p>
 <p>主題:解決CMSIMDE版本錯誤</p>
@@ -258,13 +249,12 @@ else:
 <p><span></span></p>
 <p><span>40823220 40823250</span></p>
 <p><span>主題:介紹inventor及 reveal教學</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p><h2>W14</h2>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p><h2>w14</h2>
 <p>線上同步教學</p>
 <p>第一次直播</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/npptDs_cz78" width="560"></iframe></p>
 <p><span>第二次直播</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SOV4d6DmCEs" width="560"></iframe></span></p>
-<h2>W15</h2>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SOV4d6DmCEs" width="560"></iframe></span></p><h2>w15</h2>
 <p>上課直播影片</p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mDPnTY_19A0" width="560"></iframe></span></p>
 <p>於直播中討論出繪製新的攀爬地圖，使攀爬機能發揮攀爬技能</p>
