--- a/content/W13 無障礙越野車修改.html
+++ b/content/W13 無障礙越野車修改.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 討論小組主題.html'>W11 討論小組主題</a><li><a href='W12 無障礙越野車繪製.html'>W12 無障礙越野車繪製</a><li><a href='W13 無障礙越野車修改.html'>W13 無障礙越野車修改</a><li><a href='W12-13coppelia模擬.html'>W12-13coppelia模擬</a><li><a href='W14coppelia模擬.html'>W14coppelia模擬</a><li><a href='W15coppelia模擬.html'>W15coppelia模擬</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li></ul><li class='has-children'><a href='筆記.html'>筆記</a><ul class='dropdown'><li><a href='coppelia啟動教學.html'>coppelia啟動教學</a><li><a href='lua語法和按鍵介紹.html'>lua語法和按鍵介紹</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 討論小組主題.html'>W11 討論小組主題</a><li><a href='W12 無障礙越野車繪製.html'>W12 無障礙越野車繪製</a><li><a href='W13 無障礙越野車修改.html'>W13 無障礙越野車修改</a><li><a href='W12-13coppelia模擬.html'>W12-13coppelia模擬</a><li><a href='W14coppelia模擬.html'>W14coppelia模擬</a><li><a href='W15coppelia模擬.html'>W15coppelia模擬</a></li></ul><li class='has-children'><a href='直播影片.html'>直播影片</a><ul class='dropdown'><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li></ul><li class='has-children'><a href='筆記.html'>筆記</a><ul class='dropdown'><li><a href='coppelia啟動教學.html'>coppelia啟動教學</a><li><a href='lua語法和按鍵介紹.html'>lua語法和按鍵介紹</a></li>
                       </ul>
                 </nav>
               </div>
@@ -147,7 +147,8 @@ img.add_border {
 <p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
 <p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
 <p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
-<p></p><br />W12 無障礙越野車繪製 << <a href='W12 無障礙越野車繪製.html'>Previous</a> <a href='W12-13coppelia模擬.html'>Next</a> >> W12-13coppelia模擬</div>
+<p></p>
+<br />W12 無障礙越野車繪製 << <a href='W12 無障礙越野車繪製.html'>Previous</a> <a href='W12-13coppelia模擬.html'>Next</a> >> W12-13coppelia模擬</div>
         
     <!-- footer -->
       <div class="container">
