編輯每周進度1

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -254,14 +254,13 @@ else:
 <p>第一次直播</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/npptDs_cz78" width="560"></iframe></p>
 <p><span>第二次直播</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SOV4d6DmCEs" width="560"></iframe></span></p><h2>W15</h2>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SOV4d6DmCEs" width="560"></iframe></span></p><h2>w15</h2>
 <p>上課直播影片</p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mDPnTY_19A0" width="560"></iframe></span></p>
 <p>於直播中討論出繪製新的攀爬地圖，使攀爬機能發揮攀爬技能</p>
 <p>1.新增越野車載點:<a href="https://40823220.github.io/cd2021/downloads/%E8%B6%8A%E9%87%8E%E8%BB%8A%E5%A0%B4%E6%99%AF1%E3%80%812.rar">越野車場景1、2 載點</a>。繪圖者:40823220 黃彥維</p>
 <p>2.開始模擬新場景，並串聯機械手臂模型，將機械手臂與我們stage3的場景做結合</p>
-<p>3.構想:利用機械手臂，搬取障礙物(場景1、2)供越野車爬行。</p>
-<h1>Task2</h1>
+<p>3.構想:利用機械手臂，搬取障礙物(場景1、2)供越野車爬行。</p><h1>Task2</h1>
 <h2>Stage 1</h2>
 <p><span style="background-color: #ffff00;">stage1-bg14<span style="background-color: #ffff00;"></span></span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ex3o115nqDs" width="560"></iframe></p>
