--- a/content/Stage 3.html
+++ b/content/Stage 3.html
@@ -135,8 +135,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Stage 2 << <a href='Stage 2.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>Stage 3</h1>
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; e793fcf1540d71475a976f62fa71b3607719897f</p>
-<br />Stage 2 << <a href='Stage 2.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記</div>
+<p></p><br />Stage 2 << <a href='Stage 2.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
