--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -237,11 +237,13 @@ else:
     print ('Failed connecting to  remote API server')
     print ('End')</pre>
 <h1>直播影片</h1>
-<p></p><h2>w12</h2>
+<p></p>
+<h2>w12</h2>
 <p><span>40823221 40823237</span><br/><span>主題: ipv4操作api</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
 <p><span>40823220 40823250<br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span></span></p>
-<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p><h2>w13</h2>
+<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p>
+<h2>w13</h2>
 <p>上課直播</p>
 <p>40823205 40823228</p>
 <p>主題:解決CMSIMDE版本錯誤</p>
@@ -249,18 +251,21 @@ else:
 <p><span></span></p>
 <p><span>40823220 40823250</span></p>
 <p><span>主題:介紹inventor及 reveal教學</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p><h2>w14</h2>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p>
+<h2>w14</h2>
 <p>線上同步教學</p>
 <p>第一次直播</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/npptDs_cz78" width="560"></iframe></p>
 <p><span>第二次直播</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SOV4d6DmCEs" width="560"></iframe></span></p><h2>w15</h2>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SOV4d6DmCEs" width="560"></iframe></span></p>
+<h2>w15</h2>
 <p>上課直播影片</p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mDPnTY_19A0" width="560"></iframe></span></p>
 <p>於直播中討論出繪製新的攀爬地圖，使攀爬機能發揮攀爬技能</p>
 <p>1.新增越野車載點:<a href="https://40823220.github.io/cd2021/downloads/%E8%B6%8A%E9%87%8E%E8%BB%8A%E5%A0%B4%E6%99%AF1%E3%80%812.rar">越野車場景1、2 載點</a>。繪圖者:40823220 黃彥維</p>
 <p>2.開始模擬新場景，並串聯機械手臂模型，將機械手臂與我們stage3的場景做結合</p>
-<p>3.構想:利用機械手臂，搬取障礙物(場景1、2)供越野車爬行。</p><h1>Task2</h1>
+<p>3.構想:利用機械手臂，搬取障礙物(場景1、2)供越野車爬行。</p>
+<h1>Task2</h1>
 <h2>Stage 1</h2>
 <p><span style="background-color: #ffff00;">stage1-bg14<span style="background-color: #ffff00;"></span></span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ex3o115nqDs" width="560"></iframe></p>
@@ -448,7 +453,8 @@ else:
     print ('End')</pre>
 <p></p>
 <h2>Stage 3</h2>
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; e793fcf1540d71475a976f62fa71b3607719897f</p>
+<h1>期末報告 PDF</h1>
+<h1>小組個人心得</h1>
 <h1>筆記</h1>
 <h2>coppelia啟動教學</h2>
 <p>如何開啟stl檔及基本教學</p>
