--- a/content/小組個人心得.html
+++ b/content/小組個人心得.html
@@ -134,18 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='每周進度.html'>Next</a> >> 每周進度<br /><h1>首頁</h1>
-<p>小組成員:</p>
-<p><a href="https://github.com/40823204/cd2021">40823204 repo</a>/<a href="https://40823204.github.io/cd2021/content/index.html">40823204 site</a></p>
-<p><a href="https://github.com/40823205/cd2021">40823205 repo</a>/<a href="https://40823205.github.io/cd2021/content/index.html">40823205 site</a></p>
-<p><a href="https://github.com/40823220/cd2021">40823220 repo</a>/<a href="https://40823220.github.io/cd2021/content/index.html">40823220 site</a></p>
-<p><a href="https://github.com/40823221/cd2021">40823221 repo</a>/<a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
-<p><a href="https://github.com/40823228/cd2021">40823228 repo</a>/<a href="https://40823228.github.io/cd2021/content/index.html">40823228 site</a></p>
-<p><a href="https://github.com/40823237/cd2021">40823237 repo</a>/<a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></p>
-<p><a href="https://github.com/40823242/cd2021">40823242 repo</a>/<a href="https://40823242.github.io/cd2021/content/index.html">40823242 site</a></p>
-<p><a href="https://github.com/40823250/cd2021">40823250 repo</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
-<p><a href="https://github.com/40832244/cd2021">40832244 repo</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
-<br /> <a href='每周進度.html'>Next</a> >> 每周進度</div>
+    <div id="tipue_search_content">期末報告 PDF << <a href='期末報告 PDF.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>小組個人心得</h1>
+<br />期末報告 PDF << <a href='期末報告 PDF.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
