--- a/config/content.htm
+++ b/config/content.htm
@@ -107,8 +107,19 @@
 <p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
 <p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
 <p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
-<p></p>
-<h2>W12-13coppelia模擬</h2>
+<p>------------------------------------------------------------------------------------------------</p>
+<p>零件圖</p>
+<p>1.組合底板</p>
+<p><img alt="" height="284" src="/images/組合底板.png" width="525"/></p>
+<p>2.組合副底板</p>
+<p><img alt="" height="284" src="/images/組合副底板.png" width="525"/></p>
+<p>3.蝸桿</p>
+<p><img alt="" height="284" src="/images/蝸桿.png" width="525"/></p>
+<p>4.蝸輪</p>
+<p><img alt="" height="284" src="/images/蝸輪.png" width="525"/></p>
+<p>5.輪胎</p>
+<p><img alt="" height="284" src="/images/輪胎.png" width="525"/></p>
+<p></p><h2>W12-13coppelia模擬</h2>
 <p>小組作品進度</p>
 <p>使用coppeliasim做初步模擬+lua控制</p>
 <p>說明:在場景中做初步的零件連接，並利用lua控制車子前進，但因為連接軸的問題，車子目前只能做前後移動和上下調整角度</p>
