--- a/content/W13 無障礙越野車修改.html
+++ b/content/W13 無障礙越野車修改.html
@@ -147,8 +147,19 @@ img.add_border {
 <p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
 <p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
 <p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
-<p></p>
-<br />W12 無障礙越野車繪製 << <a href='W12 無障礙越野車繪製.html'>Previous</a> <a href='W12-13coppelia模擬.html'>Next</a> >> W12-13coppelia模擬</div>
+<p>------------------------------------------------------------------------------------------------</p>
+<p>零件圖</p>
+<p>1.組合底板</p>
+<p><img alt="" height="284" src="./../images/組合底板.png" width="525"/></p>
+<p>2.組合副底板</p>
+<p><img alt="" height="284" src="./../images/組合副底板.png" width="525"/></p>
+<p>3.蝸桿</p>
+<p><img alt="" height="284" src="./../images/蝸桿.png" width="525"/></p>
+<p>4.蝸輪</p>
+<p><img alt="" height="284" src="./../images/蝸輪.png" width="525"/></p>
+<p>5.輪胎</p>
+<p><img alt="" height="284" src="./../images/輪胎.png" width="525"/></p>
+<p></p><br />W12 無障礙越野車繪製 << <a href='W12 無障礙越野車繪製.html'>Previous</a> <a href='W12-13coppelia模擬.html'>Next</a> >> W12-13coppelia模擬</div>
         
     <!-- footer -->
       <div class="container">
