--- a/reveal/index.html
+++ b/reveal/index.html
@@ -89,35 +89,50 @@
              </section>
          </section>
         <section>
-            <h2>Point of View</h2>
-            <p>
-                Press <strong>ESC</strong> to enter the slide overview.
-            </p>
-            <p>
-                Hold down the <strong>alt</strong> key (<strong>ctrl</strong> in Linux) and click on any element to zoom towards it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Click again to zoom back out.
-            </p>
-            <p>
-                (NOTE: Use ctrl + click in Linux.)
-            </p>
+           <section>
+           <h2>Task2</h2>
+           <h3>各人員將stag1及stage2加上lua或python remote api 控制</h3>
+            </section>
+           <section>
+           <h2>stage1-bg14</h2>
+           <h3>成員:40823228、40823242</h3>
+           <p><iframe width="560" height="315" src="https://www.youtube.com/embed/Ex3o115nqDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </section>
+           <section>
+           <h2>stage1-bg16</h2>
+           <h3>成員:40823221、40823237</h3>
+           <p><iframe width="560" height="315" src="https://www.youtube.com/embed/Ua9zBclBMPY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </section>
+           <section>
+           <h2>stage1-bg24</h2>
+           <h3>成員:40823204、40823220</h3>
+           <p><iframe width="560" height="315" src="https://www.youtube.com/embed/861JHEgRNk0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </section>
+           <section>
+           <h2>stage2-bg12</h2>
+           <h3>成員:40823221、40823237、40823250、40832244</h3>
+           <p><iframe width="560" height="315" src="https://www.youtube.com/embed/MsF1WQpAa04" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </section>
+           <section>
+           <h2>stage2-bg12</h2>
+           <h3>成員:40823204、40823205、40823220、40823228、40823242</h3>
+           <p><iframe width="560" height="315" src="https://www.youtube.com/embed/H0m3scUj7iM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </section>
         </section>
-
-        <section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
-            <h2>Auto-Animate</h2>
-            <p>Automatically animate matching elements across slides with <a href="https://revealjs.com/auto-animate/">Auto-Animate</a>.</p>
-            <div class="r-hstack justify-center">
-                <div data-id="box1" style="background: #999; width: 50px; height: 50px; margin: 10px; border-radius: 5px;"></div>
-                <div data-id="box2" style="background: #999; width: 50px; height: 50px; margin: 10px; border-radius: 5px;"></div>
-                <div data-id="box3" style="background: #999; width: 50px; height: 50px; margin: 10px; border-radius: 5px;"></div>
-            </div>
-        </section>
-        <section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
-            <div class="r-hstack justify-center">
-                <div data-id="box1" data-auto-animate-delay="0" style="background: cyan; width: 150px; height: 100px; margin: 10px;"></div>
-                <div data-id="box2" data-auto-animate-delay="0.1" style="background: magenta; width: 150px; height: 100px; margin: 10px;"></div>
-                <div data-id="box3" data-auto-animate-delay="0.2" style="background: yellow; width: 150px; height: 100px; margin: 10px;"></div>
-            </div>
-            <h2 style="margin-top: 20px;">Auto-Animate</h2>
-        </section>
+        <section>
+           <section>
+           <h2>CoppeliaSimEdu_4.1.0模擬</h2>
+         </section>
+        <section>
+           <section>
+           <h2>直播影片</h2>
+           <h3>W12</h3>
+           <p><iframe width="560" height="315" src="https://www.youtube.com/embed/T2CSmVCGPLk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+           <p><iframe width="560" height="315" src="https://www.youtube.com/embed/7dUx6LlgXMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </section>
+           <section>
+           <p><iframe width="560" height="315" src="https://www.youtube.com/embed/7dUx6LlgXMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </section>
         <section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
             <div class="r-stack">
                 <div data-id="box1" style="background: cyan; width: 300px; height: 300px; border-radius: 200px;"></div>
