--- a/reveal/index.html
+++ b/reveal/index.html
@@ -176,7 +176,7 @@
             </section>
             <section>
             <h2>40823220心得</h2>
-            <h15>經過這學期的洗禮，我學會了是CoppeliaSim以及Onshape這兩套軟體，還有Lua跟Py thon程式的基本認知，還有更多的附加知識，例如Youtobe的剪片上字幕，產品商業化會遇到的問題等等，但最重要的就是團隊合作，多虧了跟我同組的隊友，讓我們整體的工作，對每個人的負擔都減輕很多，對於我自己分內的工作，我也會盡力的去完成，我在這個團體裡負責的工作，主要就是處理圖檔的部分，依照組員討論出來，產品的外觀，去把它繪製出來，並且不斷地更新，我很榮幸，能為團隊帶來貢獻，這真的是很有成就感的事。最後到了期末，老師出了5個測驗給我們做，對我來說，單靠我自己的力量去完成真的是有難度的，但我們班厲害的一點就是很團結，而這位14號同學，也很有愛心跟耐心，大家群組邀一邀，就來個30人協同教學，把大家都教會，這種感覺真的很棒，真的是我全新的體驗，可以說是協同的最高境界。</h15>
+            <h15>經過這學期的洗禮，我學會了是CoppeliaSim以及Onshape這兩套軟體，還有Lua跟Py thon程式的基本認知，還有更多的附加知識，例如Youtobe的剪片上字幕，產品商業化會遇到的問題等等，但最重要的就是團隊合作，讓我們整體的工作，對每個人的負擔都減輕很多，我在這個團體裡負責的工作，主要就是處理圖檔的部分，依照組員討論出來，產品的外觀，去把它繪製出來，並且不斷地更新，我很榮幸，能為團隊帶來貢獻，這真的是很有成就感的事。</h15>
             </section>
             <section>
             <h2>40823221心得</h2>
@@ -200,7 +200,7 @@
             </section>
             <section>
             <h2>40832244心得</h2>
-            <h15>這學期學到了不少的新知識，但除了前兩次的協同分組能提供大家一些協助，在最後一次的8人協同我已經如同沒有貢獻一樣，只能跟在大家屁股後面學習!在W16我學到了不少東西，但我的進度還有點落後，我得加緊跟上班上同學才行。或許我的進度以及程度我相對其他同學來說相當落後，看起來對團隊沒有貢獻，但我會開啟電腦照著別人的操作一步一步跟著做，總比那些電腦塵封已久的人來的上進。最後比較可惜的是我的github被鎖，到現在經過我無數次的發送gmail和意見反饋但還是無法解封，現在我很擔心我的成績不知道我還有沒有救…。最後謝謝老師以及很不幸跟我同組的同學，加重你們的工作量有很抱歉，也謝謝一路上幫助我課業的同學，在我的學習進度上提供了相當大的協助。</h15>
+            <h15>這學期學到了不少的新知識，除了前兩次的協同分組能提供一些協助，在最後的8人協同我已經如同沒有貢獻一樣，只能跟在大家屁股後面學習!在W16我學到了不少東西，但我的進度還是落後的。我的程度相對其他同學來說相當落後，看起來對團隊沒有貢獻，但我會照著別人的操作跟著做，總比怠惰的人來的上進。最後比較可惜的是我的github被鎖，到現在經過我無數次的發送gmail和意見反饋還是無法解封，我很擔心我的成績還有沒有救…。最後謝謝老師以及不幸跟我同組的同學，加重你們的工作量有很抱歉，也謝謝一路上幫助我課業的同學，在我的學習進度上提供了相當大的協助。</h15>
             </section>
         </section>
         <section>
