--- a/reveal/index.html
+++ b/reveal/index.html
@@ -196,7 +196,7 @@
             </section>
             <section>
             <h2>40823250心得</h2>
-            <h15>透過這學期的課程，在學習程式與軟體應用中必須花費相當多的心力及思考，其中團隊的幫助下，每個人分工合作達到盡自己所能在讓團隊進步，我也知道說在這當中我受別人的幫助算是較多的那位，但也沒有因為較弱而放棄對程式的了解，那麼8人的任務確實跟2人與4人沒法比，許多人也是一起在線上學習，不敢說學到多少，至少在過程中都是盡可能試著去明白其中道理，˙也謝謝各位在這期間的幫助及努力，為這小團隊做了很多，老師也是不急不徐地指導我們該往哪個方向去前進，利用測驗檢測這學期的成果，小弟我在這裡先跟大家說聲辛苦了你們超棒!</h15>
+            <h15>透過這學期的課程，在學習程式與軟體應用中必須花費相當多的心力及思考，其中團隊的幫助下，每個人分工合作達到盡自己所能在讓團隊進步，我也知道說在這當中我受別人的幫助算是較多的那位，但也沒有因為較弱而放棄對程式的了解，那麼8人的任務確實跟2人與4人沒法比，至少在過程中都是盡可能試著去明白其中道理，˙也謝謝各位在這期間的幫助及努力，為這小團隊做了很多，謝謝各位的指教！</h15>
             </section>
             <section>
             <h2>40832244心得</h2>
