--- a/reveal/index.html
+++ b/reveal/index.html
@@ -184,7 +184,7 @@
             </section>
             <section>
             <h2>40823228心得</h2>
-            <h4></h4>
+            <h4>經過本學期的課程之後，讓我學到了非常多東西，從一開始的兩人小組在協同時，只需要跟一個組員溝通，到四人小組之後，在小組溝通及資料整理上，漸漸浮現的問題，到最後的八人小組任務時，不管是工作分配、資料整合上，難度都增加許多，但是如果小組內多溝通、多採納彼此不同的意見，在協同任務中，一定可以創造更好的自我價值，也會使自己的力量為團隊帶來極大的幫助，所以在協同任務中使我了解到團隊合作及工作分配的重要性。</h4>
             </section>
             <section>
             <h2>40823237心得</h2>
@@ -200,7 +200,7 @@
             </section>
             <section>
             <h2>40832244心得</h2>
-            <h15>這學期學到了不少的新知識，除了前兩次的協同分組能提供一些協助，在最後的8人協同我已經如同沒有貢獻一樣，只能跟在大家屁股後面學習!在W16我學到了不少東西，但我的進度還是落後的。我的程度相對其他同學來說相當落後，看起來對團隊沒有貢獻，但我會照著別人的操作跟著做，總比怠惰的人來的上進。最後比較可惜的是我的github被鎖，到現在經過我無數次的發送gmail和意見反饋還是無法解封，我很擔心我的成績還有沒有救…。最後謝謝老師以及不幸跟我同組的同學，加重你們的工作量有很抱歉，也謝謝一路上幫助我課業的同學，在我的學習進度上提供了相當大的協助。</h15>
+            <h15>這學期學到了不少的新知識，但除了前兩次的分組能幫助隊伍，最後的分組就沒有我能幫助的，只能跟在大家後面學習!在W16我學很多東西，但我的進度還是落後的。我的程度相對同學落後，看起來對團隊沒貢獻，但我會照著別人的操作跟著做，總比怠惰的人的上進。較可惜的是我github被鎖，經過我無數次的發送意見反饋還是沒解封，很擔心我的成績沒救了。最後謝謝老師以及跟我同組的同學，加重你們的工作量有很抱歉，也謝謝一路上幫助我課業的同學們，謝謝大家。</h15>
             </section>
         </section>
         <section>
